<resources>

    <string name="app_name">智能抄表</string>

    <string name="login_app_name">智能抄表系统</string>
    <string name="work_number">工号：</string>
    <string name="password">密码：</string>
    <string name="version_info">版本信息：1.0 Beta版</string>
    <string name="auto_login">自动登陆</string>
    <string name="forget_password">忘记密码</string>
    <string name="login_btn">登录</string>

    <!--忘记密码-->
    <string name="update_password">修改密码</string>
    <string name="back">返回</string>
    <string name="name">姓名：</string>
    <string name="submit">提交</string>
    <string name="remark">备注：重置后的密码将发送至您注册的手机号码，请注意查收。</string>


    <!--主页面-->
    <string name="welcome">欢迎登录智能抄表系统</string>

    <string name="todayTask">今日任务</string>
    <string name="currMonthTask">当月任务</string>
    <string name="historyTask">历史任务</string>
    <string name="kpi">抄表KPI</string>
    <string name="tomorrowTask">明日任务</string>
    <string name="taskInfo">任务情况</string>
    <string name="planTask">计划任务</string>
    <string name="completed">已完成</string>
    <string name="copyRate">抄见率</string>
    <string name="copyThePrecision">抄准率</string>


    <!--今日任务-->
    <string name="serialNumber">序  号：</string>
    <string name="completedInfo">完成情况:</string>
    <string name="query">查询</string>
    <string name="listShow">列表显示</string>
    <string name="mapShow">地图显示</string>
    <string name="navigation">导航</string>
    <string name="meterNumber">抄表编号：</string>
    <string name="userNo">用户号：</string>
    <string name="address">地址：</string>
    <string name="userName">用户姓名：</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_remote_plan">RemotePlanActivity</string>
    <string name="title_activity_test">TestActivity</string>


    <!--日期选择控件-->
    <string name="cancle">取消</string>
    <string name="title">请选择时间</string>
    <string name="commit">确定</string>
    <string name="year">年</string>
    <string name="month">月</string>
    <string name="day">日</string>
    <string name="hour">时</string>
    <string name="minute">分</string>

    <string name="select_date">选择日期</string>
    <string name="current_date">当前日期</string>
    <string name="select_time">选择时间</string>
    <string name="current_time">当前时间</string>
    <string name="title_activity_edit_task_detail">EditTaskDetailActivity</string>


    <string name="customerServiceTip">请选择送报事件，并进行问答，若没有相关事件，请致电人工客服。</string>
</resources>
