<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    >

    <LinearLayout
        android:id="@android:id/title"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:orientation="horizontal"
        android:gravity="center_vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="-20dp"
            android:src="@drawable/s_back"
            android:id="@+id/backImage"
            />

        <TextView
            android:id="@+id/backTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="-30dp"
            android:textColor="@color/blue"
            android:text="@string/back"
            android:textSize="16sp" />

    </LinearLayout>

    <RelativeLayout
        android:id="@android:id/title"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="60dp">

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="14dp"
            android:text="@string/update_password"
            android:textSize="22sp" />

    </RelativeLayout>


    <LinearLayout
        android:layout_below="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|top"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:gravity="center_horizontal"
        android:orientation="vertical">


        <LinearLayout
            android:id="@+id/loginpanel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/name"
                    android:textSize="20sp"/>

                <EditText
                    android:id="@+id/login_usernameEditText"
                    android:layout_width="match_parent"
                    android:layout_height="44dp"
                    android:background="@drawable/s_edit_background"
                    android:ems="10"
                    android:gravity="center_vertical"
                    android:paddingLeft="8dp"
                    android:singleLine="true"
                    android:textColor="#333333"
                    android:textColorHint="#cccccc"
                    android:textSize="16sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/work_number"
                    android:textSize="20sp"/>

                <EditText
                    android:id="@+id/login_passwordEditText"
                    android:layout_width="match_parent"
                    android:layout_height="44dp"
                    android:background="@drawable/s_edit_background"
                    android:ems="10"
                    android:gravity="center_vertical"
                    android:hint="6位数字工号"
                    android:inputType="number"
                    android:paddingLeft="8dp"
                    android:singleLine="true"
                    android:textColor="#333333"
                    android:textColorHint="#cccccc"
                    android:textSize="16sp" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:orientation="vertical"
            android:gravity="center_horizontal">

            <Button
                android:id="@+id/login_setconnectionBtn"
                android:layout_width="100dp"
                android:layout_height="35dp"
                android:background="@drawable/s_bt_shape"
                android:textColor="@color/white"
                android:gravity="center"
                android:singleLine="true"
                android:textSize="18sp"
                android:text="@string/submit" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="12dp"
                android:text="@string/remark"/>
        </LinearLayout>
    </LinearLayout>


</LinearLayout>