<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:id="@+id/main_layout"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="240dp"
        android:background="@drawable/login_bg"
        android:gravity="center"
        android:orientation="vertical">
        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="14dp"
            android:text="@string/login_app_name"
            android:textColor="@color/white"
            android:textSize="35sp" />
        <EditText
            android:id="@+id/ip"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:hint="ip"/>
        <EditText
            android:id="@+id/port"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:inputType="number"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:hint="port"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|top"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/loginpanel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/login_usernameEditText"
                    android:layout_width="match_parent"
                    android:layout_height="44dp"
                    android:background="@drawable/bg_edittext"
                    android:ems="10"
                    android:gravity="center_vertical"
                    android:drawableLeft="@drawable/name"
                    android:drawablePadding="6dp"
                    android:hint="6位数字工号"
                    android:paddingLeft="12dp"
                    android:singleLine="true"
                    android:textSize="16sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/login_passwordEditText"
                    android:layout_width="match_parent"
                    android:layout_height="44dp"
                    android:background="@drawable/bg_edittext"
                    android:ems="10"
                    android:gravity="center_vertical"
                    android:drawableLeft="@drawable/name"
                    android:drawablePadding="6dp"
                    android:hint="6位数字或字母密码"
                    android:inputType="textPassword"
                    android:paddingLeft="12dp"
                    android:singleLine="true"
                    android:textSize="16sp" />
            </LinearLayout>

        </LinearLayout>
1
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:orientation="horizontal"
            android:gravity="left">

            <CheckBox
                android:id="@+id/autoLoginBtn"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:text="@string/auto_login" />

            <!--<TextView-->
                <!--android:id="@+id/forgetPassword"-->
                <!--android:layout_width="0dp"-->
                <!--android:layout_weight="1"-->
                <!--android:gravity="right"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_marginRight="15dp"-->
                <!--android:text="@string/forget_password" />-->
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:orientation="vertical"
            android:gravity="center_horizontal">

            <TextView
                android:id="@+id/login_btn"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/bg_confirm_btn"
                android:textColor="@color/white"
                android:gravity="center"
                android:singleLine="true"
                android:textSize="18sp"
                android:text="@string/login_btn" />
        </LinearLayout>
    </LinearLayout>


</LinearLayout>